--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Pedro dos Santos\\AppData\\Roaming\\NetBeans\\27\\build.properties
+user.properties.file=C:\\Users\\flavi\\AppData\\Roaming\\NetBeans\\27\\build.properties
